[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idempotency-key"
version = "0.1.0"
description = "Tiny zero-dependency idempotency helper for Python. Make any operation safe to retry. Sync + async."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "WCN Development Co"}]
keywords = ["idempotency", "retry", "exactly-once", "dedup", "payments", "reliability"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/WCN-DEV-CO/idempotency-key"
